# simple-simcse

./: .gitignore  LICENSE  README.md  download.sh  eval.py  pyproject.toml  requirements.txt  sts.py  train-custom.sh  train-multiple.sh  train-original.sh  train.py
results/: bert-base-uncased.csv  bert-large-uncased.csv  roberta-base.csv  roberta-large.csv
