[tool.poetry]
name = "simple-simcse"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.9.x"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-linux_x86_64.whl" }
transformers = "^4.23.1"
more-itertools = "^9.0.0"
scikit-learn = "^1.1.2"
scipy = "^1.9.3"
classopt = "^0.1.9"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
